--- a/Kursach/Web.config
+++ b/Kursach/Web.config
@@ -10,7 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="IdentityDb" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\IdentityDb.mdf;Integrated Security=True" providerName="System.Data.SqlClient"/>
-    <add name="CommonModel" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename='|DataDirectory|\MovieRatingDB.mdf';Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="CommonContext" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\MovieRatingDB.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
