Добавлен основной алгоритм  фильтрации и ранжирования Некоторые изменения в интерфейсе

--- a/Kursach/Kursach.csproj
+++ b/Kursach/Kursach.csproj
@@ -239,6 +239,7 @@
     <Content Include="Views\Roles\Edit.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Roles\UserRole.cshtml" />
+    <Content Include="Views\Home\Recomendation.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\Upload\" />
